syntax = "proto3";

package proto;

option go_package = "github.com/teran/echo-grpc-server/presenter/proto";

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
}
