syntax = "proto3";

package proto;

option go_package = "github.com/teran/echo-grpc-server/presenter/proto";

message RemoteEchoRequest {
  string remote = 1;
  string message = 2;
}

message RemoteEchoResponse {
  string message = 1;
}

service RemoteEchoService {
  rpc RemoteEcho(RemoteEchoRequest) returns (RemoteEchoResponse);
}
